iceberg/iceberg-handler/src/test/queries/negative/get_variant_wrong_type.q
SELECT variant_get(parse_json('123'), '$.name');